feat(ExitConfirmPopUp) add PopUp when clicking back to Menu
	- will reset to original state when re-play the Game

	- refactor the GameStageSaver to add bindings and more maintainable